2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b68

        * Fix: Display the 'view comments in nested album' links for all users
          in commentboxtop.inc.  This was restricted to admin/owner only, so it
          broke navigation when view comments was allowed for all users.

        * Change: Fix uninitialized variable notice

2004-07-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b67

        * Fix: Trim trailing spaces from setup vars where no-trailing-slash is
          set.  This prevents the "/usr/bin /pnmtojpeg" issue

        * Fix: The addition of the 'view comments' for everyone was exposing
          hidden photos since view_comments.php had been written with only
          the owner/admin in mind.

2004-07-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b66

	* Change: Remove bastard newlines from delete_user and delete_album that were causing
	  jscript errors in Firefox.

2004-07-25  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b65

	* Fix: In some strange permission sets we got non fitting error messages.
	  - When upload_tmp_dir is not in open_basedir
	  - When userdir and /or files in it are is not writeable.

2004-07-24  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b64

        * Fix: Redirect in multi_create_user didnt worked after successfull adding.
               Reason: doctype header was set before redirect header.

2004-07-23  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b63

	* Fix: Skins will be ignored when embedded.  This was causing a lot
	  of display issues for users due to skin colors conflicting with
	  embedding-system colors.

2004-07-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b62

        * Fix?: Revert an earlier checkin (b100?) that prevented a PHP notice
          when first loading sessions while embedded.  Some users report not
          getting a session at all in postnuke.  Since postnuke was the original